# praval-ml

./: README.md  pyproject.toml
pravalml/: __init__.py  base.py  validation.py
pravalml/models/: lasso_regression.py  linear_regression.py  logistic_regression.py  mlp.py  ridge_regression.py
tests/: test_linear_regression.py  test_logistic_regression.py  test_ridge_regression.py
