[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pravalml"
version = "0.1.0"
description = "A lightweight machine learning library built from scratch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pravalml*"]
